<resources>
    <string name="app_name">Fat Lab</string>
    <string name="app_slogan">Your way to excel</string>
    <string name="title_activity_home_tabbed">HomeTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Login & Register screens text-->
    <string name="login_success">Login success!</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">Next</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="dont_have_Account">Dont have account? Register</string>
    <string name="already_have_account">Already have an account ? Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="required">Required</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="email_already_exist">This email is already registered with us</string>
    <string name="sucess_adding_user">Congratulations! you have been registered with us</string>
    <string name="error_adding_user">Error! Couldn\'t register you with us...</string>
    <string name="wrong_credenials">Email or password is incorrect!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="update_my_weight">Update my weight</string>
    <string name="my_weight_progress">My weight progress</string>
    <string name="add_new_plan">Add new plan</string>
    <string name="view_my_plans">View my plans</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_weight">Enter your weight in K.G</string>
    <string name="select_date">Select date</string>
    <string name="update_weight">Update weight</string>
    <string name="update">Update</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_file">Select file</string>
    <string name="choose_option">Select an option</string>
    <string name="error">Error</string>
    <string name="missing_image">Please, make sure to add user image</string>
    <string name="weight_update_added">Successfully added weight update</string>
    <string name="select_gender">Select your gender</string>
    <string name="back">Back</string>
    <string name="bulk">Bulk</string>
    <string name="maintain">Maintain</string>
    <string name="cut">Cut</string>
    <string name="select_your_target">Select your target</string>
    <string name="enter_number_of_meals">Enter number of meals</string>
    <string name="number_of_meals">Number of meals</string>
    <string name="select_number_of_meals">Select number of meals</string>
    <!--__________________ Foods names ______________________________________-->
    <!--Protein foods-->
    <string name="tuna_in_water">Tuna in water</string>
    <string name="grilled_chicken_breast">Grilled chicken breast</string>
    <string name="grilled_turkey_beast">Grilled turkey breast</string>
    <string name="lean_ground_beef">Lean ground beef</string>
    <string name="grilled_lean_steak">Grilled lean steak</string>
    <string name="eggs">Eggs</string>
    <string name="egg_white">Egg white</string>
    <string name="cottage_cheese">Cottage cheese</string>
    <string name="fish_fillet">Fish fillet</string>
    <string name="whey_protein_low_carb">Whey protein (low carb)</string>
    <string name="salmon">Salmon</string>
    <string name="turkey_sausage_low_fat">Turkey sausage (low fat)</string>
    <string name="greek_yogurt_low_fat">Greek yogurt (low fat)</string>
    <!--Carb foods-->
    <string name="oats">Oats</string>
    <string name="sweet_potato">Sweet potato</string>
    <string name="rice">Rice</string>
    <string name="whole_wheat_bread">Whole wheat bread</string>
    <string name="whole_grain_cereals">Whole grain cereals</string>
    <string name="baked_potatoes">Baked potatoes</string>
    <string name="red_kidney_beans">Red kidney beans</string>
    <string name="whole_wheat_pasta">Whole wheat pasta</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="quinoa">Quinoa</string>
    <string name="whole_bulgur">Whole bulgur</string>
    <!--Fat foods-->
    <string name="olive_oil">Olive oil</string>
    <string name="almonds">Almonds</string>
    <string name="peanut_butter">Peanut butter</string>
    <string name="flaxseed_oil">Flaxseed oil</string>
    <string name="peanuts">Peanuts</string>
    <string name="avocado">Avocado</string>
    <!--Fiber foods-->
    <string name="green_beans">Green beans</string>
    <string name="green_peas">Green peas</string>
    <string name="broccoli">Broccoli</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="cucumber">Cucumber</string>
    <string name="zucchini">Zucchini</string>
    <string name="spinach">Spinach</string>
    <string name="green_salad">Green salad</string>
    <string name="eggplant">Eggplant</string>
    <string name="select_body_type">Select your body type</string>
    <string name="meal_number">Meal #</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="fibers">Fibers</string>
    <string name="hash">#</string>
    <string name="my_plans">My plans</string>
    <string name="nutrition_plan">Nutrition Plan</string>
    <string name="plan_generated">Your plan has been generated</string>
    <string name="enter_valid_weight">Please, Enter a valid weight</string>
    <string name="delete_this_record">Do you want to delete this record?</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="warning">Warning</string>
    <string name="select_option">Select option</string>
    <string name="update_meal">Update meal</string>
    <string name="select_food_you_want_to_edit">Select food you want to edit</string>
    <string name="record_has_been_updated">Record has been updated</string>
    <!--Admob integration-->
    <string name="home_banner_footer">ca-app-pub-2600231704464005/6140036170</string>
    <string name="big_banner_Ad">ca-app-pub-2600231704464005/7616769373</string>
    <string name="important_notes">Important notes</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="note_protein_egg">  Egg (1 gr) = 0.13 gr protein (44 gr for 1 medium egg)</string>
    <string name="note_protein_egg_2">  Egg white (1 gr)= 0.12 gr protein (28 gr for 1 medium egg white)</string>
    <string name="note_carb_1"> Whole wheat bread (1 gr)= 0.52 gr carbs (46 gr for 1 slice)</string>
    <string name="note_carb_2"> Apple  (1 gr)= 0.13 gr carbs (182 gr for 1 medium apple)</string>
    <string name="note_carb_3">Banana (1 gr)= 0.22 gr carbs (118 gr for 1 medium banana)</string>
    <string name="note_carb_4">Orange (1 gr)= 0.12 gr carbs (130 gr for 1 medium orange)</string>
    <string name="note_fats_4">Flaxseed oil (1 gr)= 1.0 gr fats (5 gr for 1 small spoon)</string>
    <string name="note_fats_3">Peanut butter (1 gr)= 0.5 gr fats (16 gr for 1 large spoon)</string>
    <string name="note_fats_2">Almonds (1 gr)= 0.6 gr fats (1 gr for 1 almond kernel)</string>
    <string name="note_Fats_1">Olive oil (1 gr)= 1.0 gr fats (5 gr for 1 small spoon)</string>
    <string name="note_fats_5">Peanuts (1 gr)= 0.6 gr fats (1 gr for 1 peanut kernel)</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
    <string name="coach">Coach</string>
    <string name="coach_name">Seif Mohamed</string>
    <string name="coach_email_link">fatlabnutrition@gmail.com</string>
    <string name="social">Facebook</string>
    <string name="facebook">Facebook</string>
    <string name="fat_lab_maker">Fat Lab Maker</string>
    <string name="app_maker_name">Mohamed S. El-Shall</string>
    <string name="about_app">About Fat Lab</string>
    <string name="contact_us">Contacts us</string>
    <string name="notes">Notes</string>


</resources>
