<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <group
            android:id="@+id/group_nutrition_plans"
            android:checkableBehavior="single">

            <item
                android:id="@+id/nav_add_nutrition_plan"
                android:icon="@drawable/ic_add_box_blue_grey_400_24dp"
                android:title="@string/add_new_plan" />
            <item
                android:id="@+id/nav_view_my_nutrition_plans"
                android:icon="@drawable/ic_view_module_blue_grey_400_24dp"
                android:title="@string/view_my_plans" />
        </group>

        <group
            android:id="@+id/group_weight_updates"
            android:checkableBehavior="single">

            <item
                android:id="@+id/nav_update_my_weight"
                android:icon="@drawable/ic_border_color_blue_grey_400_24dp"
                android:title="@string/update_my_weight" />
            <item
                android:id="@+id/nav_my_weight_progress"
                android:icon="@drawable/ic_pageview_blue_grey_400_24dp"
                android:title="@string/my_weight_progress" />
        </group>
    </group>
</menu>
