<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <phelat.TextView.Plus
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/select_food_you_want_to_edit"
                        android:textSize="19sp"
                        app:font="fonts/slimjim.ttf" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".33"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <phelat.TextView.Plus
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/protein"
                                    android:textSize="19sp"
                                    app:font="fonts/slimjim.ttf" />

                                <Spinner
                                    android:id="@+id/sDialogEditMealProtein"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".33"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <phelat.TextView.Plus
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/carbs"
                                    android:textSize="19sp"
                                    app:font="fonts/slimjim.ttf" />

                                <Spinner
                                    android:id="@+id/sDialogEditMealCarbs"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".33"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <phelat.TextView.Plus
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/fats"
                                    android:textSize="19sp"
                                    app:font="fonts/slimjim.ttf" />

                                <Spinner
                                    android:id="@+id/sDialogEditMealFats"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/bDialogEditMealCancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/cancel" />

                        <Button
                            android:id="@+id/bDialogEditMealUpdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"

                            android:text="@string/update_meal" />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>